--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 #
 # These are the shared volumes.
 # All server containers will use these volumes.
@@ -20,7 +19,6 @@ volumes:
   mods:
 
 services:
-
   manager:
     image: dayzserver:manager-${version:-local}
     user: ${USER_ID}
@@ -33,51 +31,10 @@ services:
       - ./files:/files
       - ./:/opt/repo/
     ports:
-      - "5173:5173/tcp"
-      - "8000:8000/tcp"
+      - '5173:5173/tcp'
+      - '8000:8000/tcp'
     restart: always
     environment:
       - MANAGER_PORT=8000
     env_file:
       - .env
-
-  server_one:
-    image: dayzserver:server-${version:-local}
-    user: ${USER_ID}
-    volumes:
-      - homedir_server:/home/user
-      - serverfiles:/serverfiles
-      - servermpmissions:/mpmissions:ro
-      - mods:/mods
-      - mpmissions:/serverfiles/mpmissions
-      - profiles:/profiles
-      - ./files:/files
-      - ./:/opt/repo/
-    # To have the server show up in the LAN tab of the DayZ launcher,
-    # it must run under host mode.
-    network_mode: host
-    # The above is mutually exclusive with the below. If you don't need
-    # the server to show up on the LAN, comment out the network_mode above
-    # and uncomment the port mappings below.
-#    ports:
-#       # Game port
-#      - 2302:2302/udp
-#       # RCON port
-#      - 2303:2303/udp
-#       # Steam port
-#      - 27016:27016/udp
-    # The server script execs itself when the server exits, unless told not to by `dz stop`
-    restart: no
-    # Allows attaching a debugger from the host
-#    cap_add:
-#      - SYS_PTRACE
-    # Allows core files to be created within the container. These are VERY LARGE! Enable only for debugging!
-    # One must also set the sysctl kernel.core_pattern parameter ON THE HOST to a path that is writable within the container. YMMV
-#    ulimits:
-#      core:
-#        soft: -1
-#        hard: -1
-    env_file:
-      - .env
-    environment:
-      - SERVER_NAME=server_one
