--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -1,7 +1,7 @@
 services:
-  server_one:
-    image: dayzserver:server-{{SERVER_ID}}-${version:-local}
-    user: ${USER_ID}
+  server:
+    image: 'dayzserver:server-${version:-local}'
+    user: '${USER_ID}'
 
     env_file:
       - .env
@@ -10,14 +10,14 @@ services:
       - SERVER_ID={{SERVER_ID}}
 
     volumes:
-      - homedir_server:/home/user
-      - serverfiles:/serverfiles
-      - servermpmissions:/mpmissions:ro
-      - mods:/mods
-      - mpmissions:/serverfiles/mpmissions
-      - profiles:/profiles
-      - ./files:/files
-      - ./:/opt/repo/
+      - 'homedir_server:/home/user'
+      - 'serverfiles:/serverfiles'
+      - 'servermpmissions:/mpmissions:ro'
+      - 'mods:/mods'
+      - 'mpmissions:/serverfiles/mpmissions'
+      - 'profiles:/profiles'
+      - './files:/files'
+      - './:/opt/repo/'
 
     # To have the server show up in the LAN tab of the DayZ launcher,
     # it must run under host mode.
