--- a/.mise/tasks/docker/base/build
+++ b/.mise/tasks/docker/base/build
@@ -4,7 +4,7 @@
 #USAGE flag "-v --version <version>" "version to tag the image with" default="local"
 
 docker build \
-    -t dayzserver:base-${usage_version:-local} \
-    --file ./apps/docker/Dockerfile.base \
+    -t dayzserver:base-"${usage_version:-local}" \
+    --file ./pkgs/docker/Dockerfile \
     --build-arg BUILD_DATE="$(date +%Y-%m-%dT%H:%M:%S)" \
     ./
