--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -53,6 +53,7 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.7",
     "typescript": "^5.7.2",
