--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -21,7 +21,8 @@ FROM base AS build
 WORKDIR /opt/repo
 
 COPY ./mise.toml ./
-COPY ./.mise/tasks/setup ./.mise/tasks/
+COPY ./.mise/tasks/setup ./.mise/tasks/setup
+COPY ./.mise/tasks/core ./.mise/tasks/core
 COPY .yarn/ ./.yarn/
 COPY ./.yarnrc.yml ./yarn.lock ./package.json ./
 COPY ./apps/server/package.json ./apps/server/
@@ -33,7 +34,7 @@ RUN mise run setup
 
 COPY ./apps/manager/ ./apps/manager/
 COPY ./pkgs/sdk/ ./pkgs/sdk/
-COPY .mise/ ./.mise/
+COPY ./.mise ./.mise
 
 RUN mise run core:tasks
 RUN mise run server:build
