--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -2,23 +2,19 @@ ARG VERSION=local
 ARG BASE_IMAGE=dayzserver:base-${VERSION:-local}
 FROM "$BASE_IMAGE" AS base
 
+USER root
 
-# Setup a non-privileged user
-ARG USER_ID
-
-RUN groupadd -g ${USER_ID} user && \
-    useradd -l -u ${USER_ID} -m -g user user && \
-    mkdir -p /home/user /serverfiles/mpmissions /mods /mpmissions /profiles /opt/repo && \
-    chown -R user:user /home/user /serverfiles /mods /mpmissions /profiles /opt/repo
-
+RUN mkdir -p /serverfiles/mpmissions /mods /mpmissions /profiles && \
+    chown -R user:user /serverfiles /mods /mpmissions /profiles
 
 COPY ./apps/server/s6/services/* /etc/s6-overlay/s6-rc.d/
-COPY ./apps/server/s6/contents.d/* /etc/s6-overlay/s6-rc.d/user/contents.d/
 
 
 FROM base AS build
 
-WORKDIR /opt/repo
+USER root
+
+WORKDIR /home/user/repo
 
 COPY ./mise.toml ./
 COPY ./.mise/tasks/setup ./.mise/tasks/setup
@@ -39,11 +35,20 @@ COPY ./.mise ./.mise
 RUN mise run core:tasks
 RUN mise run server:build
 
-# Use our non-privileged user
+
+RUN chown -R user:user /home/user
+
 USER user
 
 # The dayzserver script expects a home directory to itself.
 WORKDIR /home/user
+
+ENV MODE=server
+ENV STEAM_STORE=/store/steam
+ENV SERVER_FILES=/store/serverfiles
+ENV SERVER_MODS=/store/serverfiles/mods
+ENV SERVER_MISSIONS=/store/serverfiles/mpmissions
+ENV SERVER_PROFILES=/store/serverfiles/profiles
 
 # s6 handles the rest of the lifecycle. 
 ENTRYPOINT ["/init"]
