--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   # Update this to the name of the service you want to work with in your docker-compose.yml file
   manager:
@@ -24,4 +23,5 @@ services:
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
-    entrypoint: /bin/bash
+    environment:
+      USER_ID: 1000
