--- a/apps/manager/Dockerfile
+++ b/apps/manager/Dockerfile
@@ -2,26 +2,17 @@ ARG VERSION=local
 ARG BASE_IMAGE=dayzserver:base-${VERSION:-local}
 FROM "$BASE_IMAGE" AS base
 
-USER root
-
 # Add bercon https://github.com/WoozyMasta/bercon
 RUN wget https://github.com/WoozyMasta/bercon/releases/download/1.0.0/bercon \
     && chmod +x bercon \
     && mv bercon /usr/bin
-
-RUN mkdir -p /serverfiles/steamapps/workshop/content && \
-    chown -R user:user /serverfiles
 
 COPY ./apps/manager/s6/services/* /etc/s6-overlay/s6-rc.d/
 
 # Shut steamcmd up
 COPY ./apps/manager/bin/steamservice.so /usr/lib/i386-linux-gnu/
 
-FROM base AS build
-
-USER root
-
-WORKDIR /home/user/repo
+WORKDIR /opt/repo
 
 COPY ./mise.toml ./
 COPY ./.mise/tasks/setup ./.mise/tasks/setup
@@ -42,15 +33,11 @@ COPY ./.mise ./.mise
 RUN mise run core:tasks
 RUN mise run manager:build
 
-RUN chown -R user:user /home/user
-
-USER user
-
-# The dayzserver script expects a home directory to itself.
-WORKDIR /home/user
+RUN mkdir -p /store/{serverfiles, steam, servermods, servermissions, serverprofiles}
 
 ENV MODE=manager
 ENV STEAM_STORE=/store/steam
+ENV STEAM_STORE_MODS=/store/steam/workshop/content
 ENV SERVER_FILES=/store/serverfiles
 ENV SERVER_MODS=/store/servermods
 ENV SERVER_MISSIONS=/store/servermissions
