--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -2,19 +2,9 @@ ARG VERSION=local
 ARG BASE_IMAGE=dayzserver:base-${VERSION:-local}
 FROM "$BASE_IMAGE" AS base
 
-USER root
-
-RUN mkdir -p /serverfiles/mpmissions /mods /mpmissions /profiles && \
-    chown -R user:user /serverfiles /mods /mpmissions /profiles
-
 COPY ./apps/server/s6/services/* /etc/s6-overlay/s6-rc.d/
 
-
-FROM base AS build
-
-USER root
-
-WORKDIR /home/user/repo
+WORKDIR /opt/repo
 
 COPY ./mise.toml ./
 COPY ./.mise/tasks/setup ./.mise/tasks/setup
@@ -35,20 +25,15 @@ COPY ./.mise ./.mise
 RUN mise run core:tasks
 RUN mise run server:build
 
-
-RUN chown -R user:user /home/user
-
-USER user
-
-# The dayzserver script expects a home directory to itself.
-WORKDIR /home/user
+RUN mkdir -p /store/steam /serverfiles/{mpmissions, mods, profiles}
 
 ENV MODE=server
 ENV STEAM_STORE=/store/steam
-ENV SERVER_FILES=/store/serverfiles
-ENV SERVER_MODS=/store/serverfiles/mods
-ENV SERVER_MISSIONS=/store/serverfiles/mpmissions
-ENV SERVER_PROFILES=/store/serverfiles/profiles
+ENV STEAM_STORE_MODS=/store/steam/workshop/content
+ENV SERVER_FILES=/serverfiles
+ENV SERVER_MODS=/serverfiles/mods
+ENV SERVER_MISSIONS=/serverfiles/mpmissions
+ENV SERVER_PROFILES=/serverfiles/profiles
 
 # s6 handles the rest of the lifecycle. 
 ENTRYPOINT ["/init"]
