--- a/mise.toml
+++ b/mise.toml
@@ -1,5 +1,5 @@
 [tools]
-node = "23.10.0"
+node = "20.12.2"
 usage = "2.0.7"
 yarn = "4.8.1"
 yq = "4.45.1"
@@ -21,6 +21,7 @@ yq = "4.45.1"
 # NODE_ENV = "development"
 # NPM_CONFIG_PREFIX = "~/.npm-global"
 EDITOR = "code --wait"
+NODE_OPTIONS=""
 #
 mise.file = ".env"                # load vars from a dotenv file
 _.path = [
