--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@moonrepo/cli": "^1.33.1",
     "@swc/core": "^1.11.21",
     "@types/node": "^22.14.1",
+    "@types/underscore": "^1",
     "babel-preset-moon": "^3.0.2",
     "chalk-template": "^1.1.0",
     "eslint": "^9.18.0",
@@ -24,6 +25,7 @@
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript-eslint": "^8.19.0",
+    "underscore": "^1.13.7",
     "vite": "^6.0.0",
     "vite-plugin-dts": "^4.5.3",
     "vitest": "^3.0.0"
@@ -34,6 +36,7 @@
     "pkgs/*"
   ],
   "resolutions": {
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "underscore": "^1.13.7"
   }
 }
