--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+.dayzserver.config.json
 
 # temp directory
 .temp
@@ -55,8 +56,6 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-logs
-dist
 # moon
 .moon/cache
 .moon/docker
