--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel-preset-moon": "^3.0.2",
     "chalk-template": "^1.1.0",
     "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
     "jiti": "2.4.2",
     "packemon": "^4.1.0",
