--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,6 @@
     "editor.suggest.localityBonus": true,
     "editor.suggest.filterGraceful": true,
     "editor.suggest.snippetsPreventQuickSuggestions": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "always",
         "source.fixAll": "always"
@@ -36,5 +34,6 @@
     },
     "[typescript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
-    }
+    },
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
