--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -11,6 +11,8 @@
     "dist"
   ],
   "dependencies": {
+    "@bbob/preset-react": "^4.2.0",
+    "@bbob/react": "^4.2.0",
     "@cloudflare/workers-types": "^4.20250214.0",
     "@dayzserver/sdk": "workspace:*",
     "@dnd-kit/core": "^6.3.1",
@@ -19,10 +21,12 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.6",
-    "@radix-ui/react-checkbox": "^1.2.2",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
@@ -35,6 +39,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.1",
+    "@tanstack/eslint-plugin-router": "^1.115.0",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-router-devtools": "^1.116.0",
