--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -48,11 +48,13 @@
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/zod-adapter": "^1.117.0",
+    "@types/dockerode": "^3.3.38",
     "@types/lodash-es": "4.17.12",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^4.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dockerode": "^4.0.6",
     "dotenv": "^16.5.0",
     "execa": "^9.5.2",
     "fs.promises.exists": "1.1.4",
