--- a/pkgs/sdk/package.json
+++ b/pkgs/sdk/package.json
@@ -2,6 +2,10 @@
     "name": "@dayzserver/sdk",
     "type": "module",
     "types": "./src/index.ts",
+    "exports": {
+        ".": "./src/index.ts",
+        "./schema": "./src/schema/index.ts"
+    },
     "dependencies": {
         "@types/nconf": "^0.10.7",
         "nconf": "^0.13.0"
