--- a/apps/manager/tsconfig.json
+++ b/apps/manager/tsconfig.json
@@ -26,13 +26,15 @@
     "outDir": "../../.moon/cache/types/apps/manager"
   },
   "include": [
-    "../../pkgs/sdk/**/*",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "references": [
     {
       "path": "../../pkgs/sdk"
+    },
+    {
+      "path": "../../pkgs/codes"
     }
   ]
 }
