--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -24,9 +24,10 @@
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
@@ -57,7 +58,9 @@
     "dockerode": "^4.0.6",
     "dotenv": "^16.5.0",
     "execa": "^9.5.2",
+    "framer-motion": "^12.9.4",
     "fs.promises.exists": "1.1.4",
+    "fzf": "^0.5.2",
     "lavriapg": "^0.4.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.501.0",
