--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-moon": "^3.1.1",
     "chalk-template": "^1.1.0",
     "eslint": "^9.18.0",
+    "eslint-config-moon": "^4.0.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
@@ -18,6 +19,7 @@
     "jiti": "2.4.2",
     "packemon": "^4.1.0",
     "prettier": "^3.5.3",
+    "prettier-config-moon": "^1.2.0",
     "render-cli": "^0.3.2",
     "swc-node": "^1.0.0",
     "ts-node": "^10.9.2",
