--- a/pkgs/sdk/tsconfig.json
+++ b/pkgs/sdk/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.options.json",
   "compilerOptions": {
     "moduleResolution": "node",
-    "module": "CommonJS",
+    "module": "ESNext",
     "target": "ES2022",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
