--- a/pkgs/sdk/package.json
+++ b/pkgs/sdk/package.json
@@ -4,16 +4,11 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./schema": "./src/schema/index.ts"
+    "./schema": "./src/schema/index.ts",
+    "./codes": "./src/codes/index.ts"
   },
   "dependencies": {
     "@types/nconf": "^0.10.7",
     "nconf": "^0.13.0"
-  },
-  "packemon": {
-    "inputs": {
-      "index": "./src/index.ts"
-    },
-    "platform": "node"
   }
 }
